--- a/lab3_v3.html
+++ b/lab3_v3.html
@@ -58,12 +58,12 @@
 				// Her besvares deloppgave 2 (se lenken til jCanvas dokumentasjon i oppgaveteksten)
 				.drawText({
 				fillStyle:"#000", //fargen til konturene til tekstfiguerne
-				strokeStyle:"#000",
-				strokeWidth: 1,
-				x:mouse.x,
-				y:mouse.y,
-				font:"12pt Verdana, sans-serif",
-				text: mouse.x + "," + mouse.y
+				strokeStyle:"#000",//linjetype på canvas
+				strokeWidth: 1,//linjebredde
+				x:mouse.x,//koordinatene til museklikk
+				y:mouse.y,//koordinatene til museklikk
+				font:"12pt Verdana, sans-serif",//skrifttype og størrelse
+				text: mouse.x + "," + mouse.y//teksten som skrives ut
 				
 			});
 			
